src/main/webapp/resources/css/structure.css
/* ... */
form[id$='facetType'] > div.clearfix {margin-bottom:4px;}
form[id$='facetType'] > div.clearfix:last-child {margin-bottom:0;}
form[id$='facetType'] > div.clearfix .facetTypeChBox {display:block; float:left;}
form[id$='facetType'] > div.clearfix .facetTypeChBox > div.ui-chkbox {padding-top:2px;padding-right:4px;}
form[id$='facetType'] > div.clearfix a.facetTypeLink {display:block; float:left; text-decoration:none;}
form[id$='facetType'] > div.clearfix a.facetTypeLink span {padding:4px 0px 4px 30px;}
form[id$='facetType'] > div.clearfix a.facetTypeLink span.facetTypeDataverse {background: url(/resources/images/icon_dataverse.png) no-repeat 4px 50% / 18px;}
form[id$='facetType'] > div.clearfix a.facetTypeLink.facetSelected span.facetTypeDataverse {background: url(/resources/images/icon_dataverse_dark.png) no-repeat 4px 50% / 18px;}
form[id$='facetType'] > div.clearfix a.facetTypeLink span.facetTypeDataset {background: url(/resources/images/icon_dataset.png) no-repeat 4px 50% / 18px;}
form[id$='facetType'] > div.clearfix a.facetTypeLink.facetSelected span.facetTypeDataset {background: url(/resources/images/icon_dataset_dark.png) no-repeat 4px 50% / 18px;}
form[id$='facetType'] > div.clearfix a.facetTypeLink span.facetTypeFile {background: url(/resources/images/icon_file.png) no-repeat 4px 50% / 18px;}
form[id$='facetType'] > div.clearfix a.facetTypeLink.facetSelected span.facetTypeFile {background: url(/resources/images/icon_file_dark.png) no-repeat 4px 50% / 18px;}

div[id$='facetCategoryList'] {padding:4px; border:1px solid #DDD;}
div[id$='facetCategoryList'] ul, div[id$='facetCategoryList'] li, div[id$='facetCategoryList'] div {margin:0; padding:0; list-style: none; border:0;}
div[id$='facetCategoryList'] > div > ul > li {border-bottom:1px solid #DDD; margin-bottom:.5em;}
div[id$='facetCategoryList'] > div > ul > li:last-child {border-bottom:0; margin-bottom:0;}
div[id$='facetCategoryList'] div li div {padding:4px 0px;}
div[id$='facetCategoryList'] div li div.ui-datalist-empty-message {padding:4px 0px; font-style:italic; color:#AAA;}
div[id$='facetCategoryList'] div.ui-datalist, div[id$='facetCategoryList'] div.ui-datalist div.ui-datalist-content {padding-top:0;}
.facetCategoryName {font-weight:bold;}

.facetCategoryName, .facetLink {
-ms-word-break: break-all;

     /* Be VERY careful with this, breaks normal words wh_erever */
     word-break: break-all;

     /* Non standard for webkit */
     word-break: break-word;

-webkit-hyphens: auto;
   -moz-hyphens: auto;
        hyphens: auto;}
a.facetLink {text-decoration:none;}
a.facetLink.facetSelected, a.facetTypeLink.facetSelected {font-weight:bold;}
.facetSelected.resultsTopBlock {background-color:#E6F1F6; padding-left:.3em; padding-right:.3em;}
a.facetLink.facetSelected span.glyphicon-remove {vertical-align:text-top; margin-top:1px; margin-left:.25em;}

table.ui-panelgrid.facetsMoreLess {width:100%;}
table.ui-panelgrid.facetsMoreLess tr.ui-widget-content {border:0;}
table.ui-panelgrid.facetsMoreLess td {width:50%; border:0;}
table.ui-panelgrid.facetsMoreLess td:last-child {text-align:right;}

#dv-maincolumn div.emptyResults.bg-warning {background:#FCF8F2; padding:.5em 1em;}
#dv-maincolumn a.facetLink.facetSelected.resultsTopBlock {margin-right:1em;}

#dv-maincolumn div.results-sort-pagination div.pagination {margin-left:1em;}
#dv-maincolumn div.results-sort-pagination.results-bottom .pagination {margin-top:0; margin-bottom:0;}

div[id$='resultsTable'] .ui-datatable-tablewrapper table > thead {display:none;}
div[id$='resultsTable'] > .ui-datatable-tablewrapper > table {border-collapse:separate; border-spacing:0 1em;}

div[id$='resultsTable'].resultsNone .ui-datatable-tablewrapper table tfoot {display:none;}

/* -------- ADVANCED -------- */
#advancedSearchForm .select-scroll-block {height:auto; max-height:120px; overflow-y:scroll; padding: 6px 12px;}
#advancedSearchForm .select-scroll-block table.ui-selectmanycheckbox label {margin-left:5px; margin-top:0; font-weight:normal;}

/* -------- DATASET -------- */
.panelgridLayoutTable.titleCitationBlock, 
.panelgridLayoutTable.titleCitationBlock tr.ui-widget-content, 
.panelgridLayoutTable.titleCitationBlock tr.ui-widget-content td {border:0;}

#datasetVersionBlock span.label {vertical-align:text-top; line-height:normal; margin-left: 1em;}

span[id$='editDataSet'] .ui-button-text {white-space: nowrap;}

#replicationDataButton {margin-top:5px;}
                                    
#title {/*display:block;*/font-size:1.5em;font-weight:bold; /*margin-bottom:.5em;*/}
#author, #contact {display:block; margin-bottom:.5em;}
#citation {padding:.5em; margin-bottom:.5em;}
#description {display:block; margin-bottom:.5em;}
#keywords, #subject, #note, #publication {display:block; margin-bottom:.5em;}
#keywords {}

div.form-group .glyphicon.glyphicon-asterisk {font-size:.5em; vertical-align:text-top;}
#datasetForm .form-group {overflow: hidden;}
#datasetForm .form-col-container .form-col-container {padding-left:0;}
#datasetForm .form-col-container .form-col-container .ui-selectonemenu {display:block;}

#datasetForm div.ui-selectonemenu.form-control {padding:0px;} /* Primefaces vs Bootstrap selectOneMenu fix */
#datasetForm .form-col-container .form-col-container .ui-selectonemenu .ui-selectonemenu-label {padding:6px 4px;}
#datasetForm .form-col-container .form-col-container .ui-selectonemenu .ui-selectonemenu-trigger {border-radius:0; width:24px;}
#datasetForm .form-col-container .form-col-container .ui-selectonemenu .ui-selectonemenu-trigger .ui-icon {margin-top:6px;}

#datasetForm .select-scroll-block {height:auto; max-height:120px; overflow-y:scroll; padding: 6px 12px;}
#datasetForm .select-scroll-block table.ui-selectmanycheckbox label {margin-left:5px; margin-top:0; font-weight:normal;}

#contentTabs .ui-tabs .ui-tabs-panel {padding-left:0; padding-right:0;}

#contentTabs div.panel-heading[data-toggle="collapse"] {cursor: pointer; cursor: hand;}
/* ... */

